[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
darling = "0.20.8"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.52",  features = ["full"] }
