[package]
name = "sorted"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.108", features = ["diff"] }

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "3", features = ["full", "visit-mut"] }
