[package]
name = "workshop-test-runner"
version = "0.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"

[lib]
name = "workshop"

[dependencies]
lazy_static = "1.3"
rand_core = "0.4"
rand_xorshift = "0.1"
remain = "0.1"
serde = { version = "1.0", features = ["derive"] }
termcolor = "1.0"
toml = "0.5"
